--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,8 +4,8 @@
     justify-content: center;
     /* align-items: center; */
     min-height: 91vh;
-    background-color: #f5f5f5;
-    background-image: url();
+    /* background-color: #f5f5f5; */
+    background: url("./assets/background.jpg") center center/cover ;
   }
   
   .signup-form {
@@ -83,7 +83,12 @@
   justify-content: center;
   /* align-items: center; */
   min-height: 50vh;
-  background-color: #f5f5f5;
+  /* background-color: #f5f5f5; */
+
+}
+.main{
+  background: url("./background.jpg") center center/cover no-repeat ;
+min-height: 100vh;
 }
 
 .login-form {
@@ -114,4 +119,10 @@
 }
 .white{
   color: #ffffff !important;
+}
+
+.color-1{
+  background:#1a1a2e;
+  color:white;
+  height: 100vh;
 }
