--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,6 @@
     /* align-items: center; */
     min-height: 91vh;
     /* background-color: #f5f5f5; */
-    background: url("./assets/background.jpg") center center/cover ;
   }
   
   .signup-form {
@@ -83,11 +82,12 @@
   justify-content: center;
   /* align-items: center; */
   min-height: 50vh;
+
   /* background-color: #f5f5f5; */
 
 }
 .main{
-  background: url("./background.jpg") center center/cover no-repeat ;
+  background: url("./assets/background.jpg") center center/cover no-repeat ;
 min-height: 100vh;
 }
 
@@ -125,4 +125,9 @@ min-height: 100vh;
   background:#1a1a2e;
   color:white;
   height: 100vh;
+}
+body{
+  background:#1a1a2e;
+  color:white;
+
 }
