--- a/client/src/App.css
+++ b/client/src/App.css
@@ -137,12 +137,12 @@ min-height: 100vh;
 }
 
 .color-1{
-  background:#1a1a2e;
+  background:#121212;
   color:white;
   height: 100vh;
 }
 body{
-  background:#1a1a2e;
+  background:#121212;
   color:white;
 
 }
