praticeproblem's profile and solve a pratice problem ui made

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -292,3 +292,9 @@ body{
     opacity: 1;
   }
 }
+
+/* Pratice Course Arena */
+.pratice-title:hover{
+  color:blue;
+  text-decoration:underline
+}
