--- a/client/src/App.css
+++ b/client/src/App.css
@@ -304,3 +304,51 @@ body{
 .navbar-item-heading{
   color: white;
 }
+
+
+
+/* Home Main Design */
+.custom-heading {
+  font-weight: bold;
+  text-align: center;
+  margin: 0.5rem 0;
+  font-size: 3.75rem; /* Base size */
+}
+
+.gradient-text {
+  background: linear-gradient(to bottom, #60a5fa, #1d4ed8);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: bold;
+}
+
+/* Responsive font sizes */
+@media (min-width: 768px) {
+  .custom-heading {
+    font-size: 4.5rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .custom-heading {
+    font-size: 6rem;
+  }
+}
+
+.custom-paragraph {
+  color: rgba(242, 242, 243, 0.8); /* Equivalent to text-primary/80 */
+  max-width: 40rem; /* Equivalent to max-w-lg */
+  text-align: center;
+  letter-spacing: -0.015rem; /* Equivalent to tracking-tight */
+  font-weight: 300; /* Equivalent to font-light */
+  font-size: 1rem; /* Default text size */
+  margin: 0 auto; /* Center align the paragraph */
+}
+
+/* Medium (md) breakpoint */
+@media (min-width: 768px) {
+  .custom-paragraph {
+    font-size: 1.125rem; /* Equivalent to md:text-lg */
+  }
+}
