--- a/client/src/App.css
+++ b/client/src/App.css
@@ -102,7 +102,7 @@ body {
 
 }
 .main{
-  background: url("./assets/background.jpg") center center/cover no-repeat ;
+  background: url("./assets/img7.jpg") center center/cover no-repeat ;
 min-height: 100vh;
 }
 
