--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,8 @@
-body {
+html {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
-  color: #333;
+  background-color:#121212;
+  color: #ffffff;
 }
 
 #root {
